# amaru

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MONITORING.md  Makefile  PROFILING.md  README.md  clippy.toml  codecov.yml  deny.toml  flake.nix  release.toml  rust-toolchain.toml  rustfmt.toml  version.toml
amaru/: Cargo.toml  README.md
amaru-common/: Cargo.toml  README.md
amaru-common/src/: lib.rs  tests.rs
amaru-common/src/ledger/: mod.rs
amaru-common/src/nonce/: mod.rs
amaru-common/src/pool/: mod.rs
amaru-common/src/validator/: mod.rs
amaru-consensus/: Cargo.toml  README.md
amaru-consensus/src/: lib.rs  tests.rs
amaru-consensus/src/block/: mod.rs
amaru-crypto/: Cargo.toml
amaru-node/: Cargo.toml
amaru-node/src/: main.rs
amaru/data/: README.md
amaru/data/preprod/: nonces.csv
amaru/src/: lib.rs  main.rs
amaru/src/consensus/: header_validation.rs  mod.rs  validate.rs  worker.rs
amaru/src/iter/: borrow.rs
amaru/src/ledger/: README.md  kernel.rs  mock.rs  mod.rs  stake_distribution.rs  stake_pools.rs  state.rs  store.rs  worker.rs
amaru/src/mempool/: README.md  mod.rs
amaru/src/sync/: fetch.rs  mod.rs  pull.rs  validate.rs
conformance-tests/haskell-node-extractor/: .gitignore  Makefile  README.md  cabal.project  haskell-node-extractor.cabal
conformance-tests/haskell-node-extractor/app/: Main.hs
conformance-tests/haskell-node-extractor/src/: Command.hs  Error.hs  Genesis.hs  Snapshot.hs
crates/amaru/: Cargo.toml  build.rs
crates/amaru-consensus/: Cargo.toml  README.md
crates/amaru-consensus/benches/: headers_tree.rs  stage_msgs.rs
crates/amaru-consensus/src/: chain_forward.rs  errors.rs  events.rs  lib.rs  peer.rs  span.rs  store.rs  validate_header.rs
crates/amaru-iter-borrow/: Cargo.toml
crates/amaru-iter-borrow/src/: lib.rs
crates/amaru-kernel/: Cargo.toml
crates/amaru-kernel/benches/: cbor_encoding.rs
crates/amaru-kernel/src/: account.rs  anchor.rs  arc_mapped.rs  arena_pool.rs  auxiliary_data.rs  ballot.rs  ballot_id.rs  block.rs  borrowed_datum.rs  bytes.rs  cardano.rs  certificate_pointer.rs  connection.rs  consensus_events.rs  constitution.rs  constitutional_committee.rs  context.rs  data_structures.rs  diff_bind.rs  drep.rs  drep_state.rs  ignore_eq.rs  key_value_pairs.rs  lib.rs  macros.rs  memoized.rs  metadatum.rs  network.rs  non_empty_key_value_pairs.rs  non_empty_set.rs  ordered_redeemer.rs  peer.rs  point.rs  pool_params.rs  proposal.rs  proposal_id.rs  proposal_pointer.rs  proposal_state.rs  protocol_parameters.rs  protocol_parameters_update.rs  (+19 more)
crates/amaru-ledger/: Cargo.toml  README.md  build.rs
crates/amaru-ledger/amaru-mempool/: Cargo.toml
crates/amaru-ledger/src/: block_validator.rs  bootstrap.rs  bootstrap_hd.rs  context.rs  epoch_transition.rs  governance.rs  ledger.rs  lib.rs  mempack.rs  metrics.rs  protocol_parameters.rs  registered_relay_addrs.rs  rewards.rs  rules.rs  state.rs  store.rs
crates/amaru-ledger/tests/: evaluate_ledger_states.rs  state_rollback.rs
crates/amaru-mempool/: Cargo.toml
crates/amaru-mempool/src/: into_keys.rs  lib.rs  mempool.rs
crates/amaru-metrics/: Cargo.toml  README.md
crates/amaru-metrics/src/: ledger.rs  lib.rs  mempool.rs  metrics.rs  protocol.rs
crates/amaru-minicbor-extra/: Cargo.toml  README.md
crates/amaru-minicbor-extra/src/: decode.rs  encode.rs  lib.rs
crates/amaru-mithril/: Cargo.toml  README.md
crates/amaru-mithril/src/: lib.rs
crates/amaru-network/: Cargo.toml  README.md
crates/amaru-network/src/: acto_connection.rs  block_fetch_client.rs  bytes.rs  chain_sync_client.rs  connection.rs  effects.rs  lib.rs  mempool_effects.rs  mux.rs  network_resource.rs  point.rs  protocol.rs  session.rs  socket.rs  socket_addr.rs  upstream_connection.rs
crates/amaru-observability/: Cargo.toml
crates/amaru-observability/examples/: query_registry.rs
crates/amaru-observability/macros/: Cargo.toml  README.md
crates/amaru-observability/src/: lib.rs  registry.rs  schemas.rs  span.rs
crates/amaru-observability/tests/: trace_record.rs  trace_span.rs
crates/amaru-ouroboros/: Cargo.toml
crates/amaru-ouroboros-traits/: Cargo.toml
crates/amaru-ouroboros-traits/src/: connection.rs  has_stake_pools.rs  lib.rs  mempool.rs  network_operations.rs  tx_submission_events.rs
crates/amaru-ouroboros/src/: lib.rs  mempool.rs  serde_util.rs
crates/amaru-ouroboros/tests/: validation.rs
crates/amaru-plutus/: Cargo.toml  README.md
crates/amaru-plutus/src/: arena_pool.rs  context.rs  evaluation_context.rs  lib.rs  macros.rs  to_plutus_data.rs  unstable.rs
crates/amaru-progress-bar/: Cargo.toml
crates/amaru-progress-bar/src/: lib.rs  terminal_progress_bar.rs
crates/amaru-protocols/: Cargo.toml
crates/amaru-protocols/src/: accept.rs  connection.rs  deserializers.rs  effects.rs  leios_notify.rs  lib.rs  manager.rs  mempool_effects.rs  metrics_effects.rs  mux.rs  network_effects.rs  store_effects.rs  tests.rs
crates/amaru-sim/: Cargo.toml
crates/amaru-sim/src/: lib.rs
crates/amaru-stores/: Cargo.toml
crates/amaru-stores/in_memory/: mod.rs
crates/amaru-stores/src/: chain_store.rs  lib.rs
crates/amaru-tracing-json/: Cargo.toml
crates/amaru-tracing-json/src/: assertions.rs  collect.rs  format.rs  json_layer.rs  json_trace_collector.rs  json_visitor.rs  lib.rs  trace_collect_config.rs  tree.rs
crates/amaru/src/: batcher.rs  blockchain.rs  bootstrap.rs  exit.rs  lib.rs  metrics.rs  mithril.rs  observability.rs  panic.rs  pipeline.rs  point.rs  submit_api.rs  sync.rs  time.rs
crates/amaru/tests/: evaluate_ledger_states.rs  lib.rs  rewards.rs  (+4 more)
crates/consensus/: Cargo.toml
crates/iter-borrow/: Cargo.toml
crates/ledger/: Cargo.toml
examples/: Cargo.toml  README.md
examples/ledger-in-browser/: Cargo.toml  README.md  index.mjs
examples/ledger-in-nodejs/: Cargo.toml  Makefile  README.md  index.mjs  rust-toolchain.toml
examples/proof-of-ledger/: Cargo.toml  Makefile  rust-toolchain.toml
examples/shared/: Cargo.toml  Makefile
(+3011 files in other folders)
