[package]
name = "amaru-common"
description = "Amaru crate providing common functionality for various bounded contexts."
version = "0.0.1"
edition = "2021"
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Andrew Westberg <andrewwestberg@gmail.com>",
]

[dependencies]
hex = "0.4"
mockall = "0.13"
pallas-crypto = "0.30.2"
pallas-traverse = "0.30.2"
thiserror = "1"
