[package]
name = "amaru-consensus"
description = "Amaru crate providing Cardano consensus logic."
version = "0.0.1"
edition = "2021"
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Andrew Westberg <andrewwestberg@gmail.com>",
]

[dependencies]
amaru-common = { path = "../amaru-common" }
ctor = "0.2"
hex = "0.4"
malachite = "0.4"
malachite-base = "0.4"
mockall = "0.13"
#FIXME: remove pointing to pallas forks before merging
pallas-codec = { git = "https://github.com/txpipe/pallas", rev = "964ce974911e98b8b0f613ee82084f656a7c907b" }
pallas-crypto = { git = "https://github.com/txpipe/pallas", rev = "964ce974911e98b8b0f613ee82084f656a7c907b" }
pallas-math = { git = "https://github.com/txpipe/pallas", rev = "964ce974911e98b8b0f613ee82084f656a7c907b" }
pallas-primitives = { git = "https://github.com/txpipe/pallas", rev = "964ce974911e98b8b0f613ee82084f656a7c907b" }
pallas-traverse = { git = "https://github.com/txpipe/pallas", rev = "964ce974911e98b8b0f613ee82084f656a7c907b" }
#pallas-codec = "0.30.2"
#pallas-crypto = "0.30.2"
#pallas-math = "0.30.2"
#pallas-primitives = "0.30.2"
#pallas-traverse = "0.30.2"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

#gmp has problems with thread safety and cannot easily implement Send + Sync without changes to the library
#[target.'cfg(not(target_os = "windows"))'.dependencies]
#pallas-math = { git = "https://github.com/txpipe/pallas", rev = "a548b435e62521f99d7f538783fe8c44a1adaa12", features = ["gmp"] }
