[package]
name = "amaru-crypto"
description = "Amaru crate providing higher-level Cardano-specific crypto algorithms."
version = "0.0.1"
edition = "2021"
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Andrew Westberg <andrewwestberg@gmail.com>",
]
[dependencies]
