[package]
name = "amaru-node"
description = "Cardano Rust node implementation."
version = "0.0.1"
edition = "2021"
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Andrew Westberg <andrewwestberg@gmail.com>",
]

[dependencies]
amaru-common = { path = "../amaru-common" }
amaru-consensus = { path = "../amaru-consensus" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# logging
log = "0.4"
env_logger = "0.11"
pretty_env_logger = "0.5"
