[package]
name = "amaru"
version = "0.1.0"
edition = "2021"
description = "A Cardano blockchain node implementation"
license = "Apache-2.0"
authors = ["Amaru Maintainers <amaru@pragma.builders>"]
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
documentation = "https://docs.rs/amaru"
readme = "README.md"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
gasket = { version = "0.8.0", features = ["derive"] }
hex = "0.4.3"
miette = "7.2.0"
pallas-crypto = "0.30.2"
pallas-network = "0.30.2"
pallas-traverse = "0.30.2"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
