[package]
name = "amaru"
version = "0.1.0"
edition = "2021"
description = "A Cardano blockchain node implementation"
license = "Apache-2.0"
authors = ["Amaru Maintainers <amaru@pragma.builders>"]
repository = "https://github.com/pragma-org/amaru"
homepage = "https://github.com/pragma-org/amaru"
documentation = "https://docs.rs/amaru"
readme = "README.md"
rust-version = "1.81.0"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
gasket = { version = "0.8.0", features = ["derive"] }
hex = "0.4.3"
miette = "7.2.0"
ouroboros = { git = "https://github.com/pragma-org/ouroboros", rev = "ca1d447a6c106e421e6c2b1c7d9d59abf5ca9589" }
ouroboros-praos = { git = "https://github.com/pragma-org/ouroboros", rev = "ca1d447a6c106e421e6c2b1c7d9d59abf5ca9589" }
pallas-addresses = "0.31.0"
pallas-codec = "0.31.0"
pallas-crypto = "0.31.0"
pallas-primitives = "0.31.0"
pallas-math = "0.31.0"
pallas-network = "0.31.0"
pallas-traverse = "0.31.0"
uplc = "1.1.7"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
rocksdb = "0.22.0"
indicatif = "0.17.9"
vec1 = "1.12.1"
serde = "1.0.215"
bech32 = "0.11.0"
opentelemetry = { version = "0.27.1" }
opentelemetry_sdk = { version = "0.27.1", features = ["async-std", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic"] }
tracing-opentelemetry = { version = "0.28.0" }

[dev-dependencies]
envpath = { version = "0.0.1-beta.3", features = ["rand"] }
insta = { version = "1.41.1", features = ["json"] }
proptest = "1.5.0"
