lints.workspace = true

[package]
name = "amaru-consensus"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
profiling = ["dep:pprof"]
test-utils = ["proptest", "rand", "rand_distr", "serde_json"]
telemetry = ["opentelemetry", "tracing-opentelemetry"]

[dependencies]
anyhow.workspace = true
hex.workspace = true
itertools.workspace = true
opentelemetry = { workspace = true, optional = true }
pallas-crypto.workspace = true
pallas-math.workspace = true

proptest = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }
rayon.workspace = true
serde_json = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }

amaru-kernel.workspace = true
amaru-ouroboros.workspace = true
amaru-ouroboros-traits.workspace = true
amaru-slot-arithmetic.workspace = true
pure-stage.workspace = true

[dev-dependencies]
either.workspace = true
hex.workspace = true
insta.workspace = true
minicbor.workspace = true
proptest.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tracing-subscriber.workspace = true
amaru-slot-arithmetic = { workspace = true, features = ["test-utils"] }

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15", features = ["flamegraph"], optional = true }

[[bench]]
name = "headers_tree"
harness = false
required-features = ["test-utils"]
