lints.workspace = true

[package]
name = "amaru-consensus"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
profiling = ["dep:pprof"]
test-utils = ["proptest", "dep:rand", "serde_json"]
amaru-upstream = ["dep:pallas-network", "dep:rand", "dep:amaru-network"]

[dependencies]
acto.workspace = true
anyhow.workspace = true
async-trait.workspace = true
futures-util.workspace = true
hex.workspace = true
itertools.workspace = true
pallas-crypto.workspace = true
pallas-network = { workspace = true, optional = true }
parking_lot.workspace = true
proptest = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rayon.workspace = true
serde_json = { workspace = true, optional = true }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

amaru-kernel.workspace = true
amaru-network = { workspace = true, optional = true }
amaru-ouroboros.workspace = true
amaru-metrics.workspace = true
amaru-ouroboros-traits.workspace = true
amaru-slot-arithmetic.workspace = true
pure-stage.workspace = true

[dev-dependencies]
hex.workspace = true
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
amaru-kernel = { workspace = true, features = ["test-utils"] }
amaru-slot-arithmetic = { workspace = true, features = ["test-utils"] }
amaru-ouroboros-traits = { workspace = true, features = ["test-utils"] }
amaru-stores = { workspace = true, features = ["test-utils"] }

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15", features = ["flamegraph"], optional = true }
amaru-stores.workspace = true

[[bench]]
name = "headers_tree"
harness = false
required-features = ["test-utils"]
