lints.workspace = true

[package]
name = "amaru-kernel"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[features]
default = []
test-utils = ["proptest"]

[dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
bech32.workspace = true
hex.workspace = true
pallas-addresses.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-primitives.workspace = true
pallas-traverse.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
thiserror.workspace = true
tracing.workspace = true
proptest = { workspace = true, optional = true }

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-slot-arithmetic.workspace = true
amaru-minicbor-extra.workspace = true

[dev-dependencies]
# External dependencies ───────────────────────────────────────────────────────┐
proptest.workspace = true
test-case.workspace = true

# Internal dependencies ───────────────────────────────────────────────────────┐
amaru-slot-arithmetic = { workspace = true, features = [ "test-utils" ] }
